--- a/package.json
+++ b/package.json
@@ -1,1 +1,11 @@
-{}
+{
+  "dependencies": {
+    "@apollo/client": "^3.7.17",
+    "cross-fetch": "^4.0.0",
+    "jest": "^29.6.2",
+    "ts-node": "^10.9.1"
+  },
+  "devDependencies": {
+    "ts-jest": "^29.1.1"
+  }
+}
