--- a/testrunner/package.json
+++ b/testrunner/package.json
@@ -12,10 +12,10 @@
         "@apollo/client": "^3.6.6",
         "cross-fetch": "^3.1.5",
         "jest": "^29.6.2",
-        "ts-jest": "^28.0.4",
         "typescript": "^4.7.3"
     },
     "devDependencies": {
-        "@types/jest": "^28.1.1"
+        "@types/jest": "^28.1.1",
+        "ts-jest": "^29.1.1"
     }
 }
