--- a/testrunner/package.json
+++ b/testrunner/package.json
@@ -2,7 +2,7 @@
     "name": "tests",
     "version": "1.0.0",
     "description": "",
-    "main": "jest.config.js",
+    "main": "jest.config.ts",
     "scripts": {
         "test": "jest"
     },
@@ -12,6 +12,7 @@
         "@apollo/client": "^3.6.6",
         "cross-fetch": "^3.1.5",
         "jest": "^29.6.2",
+        "ts-node": "^10.9.1",
         "typescript": "^4.7.3"
     },
     "devDependencies": {
