--- a/.github/workflows/client-tests.yml
+++ b/.github/workflows/client-tests.yml
@@ -8,4 +8,4 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v2
       - name: Goto client and run tests
-        run: cd front && npm i && npm test
+        run: cd testrunner && npm i && npm test
