--- a/testrunner/package.json
+++ b/testrunner/package.json
@@ -7,10 +7,16 @@
         "test": "jest"
     },
     "author": "",
+    "type": "module",
     "license": "ISC",
     "dependencies": {
         "@apollo/client": "^3.6.6",
+        "@graphql-tools/mock": "^9.0.0",
+        "@graphql-tools/schema": "^10.0.0",
+        "apollo-link-schema": "^1.2.5",
         "cross-fetch": "^3.1.5",
+        "graph-tools": "^0.1.2",
+        "graphql-tools": "^9.0.0",
         "jest": "^29.6.2",
         "ts-node": "^10.9.1",
         "typescript": "^4.7.3"
