--- a/testrunner/package.json
+++ b/testrunner/package.json
@@ -22,7 +22,11 @@
         "typescript": "^4.7.3"
     },
     "devDependencies": {
+        "@babel/core": "^7.23.2",
+        "@babel/preset-env": "^7.23.2",
+        "@babel/preset-typescript": "^7.23.2",
         "@types/jest": "^28.1.1",
+        "babel-jest": "^29.7.0",
         "ts-jest": "^29.1.1"
     }
 }
