--- a/testrunner/package.json
+++ b/testrunner/package.json
@@ -13,20 +13,19 @@
         "@apollo/client": "^3.6.6",
         "@graphql-tools/mock": "^9.0.0",
         "@graphql-tools/schema": "^10.0.0",
+        "@types/jest": "^27.5.2",
         "apollo-link-schema": "^1.2.5",
         "cross-fetch": "^3.1.5",
         "graph-tools": "^0.1.2",
         "graphql-tools": "^9.0.0",
         "jest": "^29.6.2",
-        "ts-node": "^10.9.1",
-        "typescript": "^4.7.3"
+        "react": "^18.2.0",
+        "typescript": "^4.9.5"
     },
     "devDependencies": {
         "@babel/core": "^7.23.2",
         "@babel/preset-env": "^7.23.2",
         "@babel/preset-typescript": "^7.23.2",
-        "@types/jest": "^28.1.1",
-        "babel-jest": "^29.7.0",
-        "ts-jest": "^29.1.1"
+        "babel-jest": "^29.7.0"
     }
 }
