--- a/testrunner/tsconfig.json
+++ b/testrunner/tsconfig.json
@@ -1,8 +1,8 @@
 {
     "compilerOptions": {
-      "target": "es2018",
-      "module": "commonjs",
-      "lib": ["es2018", "esnext.asynciterable"],
+      "target": "ES6",
+      "module": "CommonJS",
+      "lib": ["ES6", "esnext.asynciterable"],
       "skipLibCheck": true,
       "sourceMap": true,
       "outDir": "./dist",
@@ -23,5 +23,5 @@
       "baseUrl": ".",
     },
     "exclude": ["node_modules"],
-    "include": ["./src/**/*.ts"]
+    "include": ["./src/*.ts", "./src/**/*.ts"],
   }
