--- a/testrunner/package.json
+++ b/testrunner/package.json
@@ -20,6 +20,7 @@
         "graphql-tools": "^9.0.0",
         "jest": "^29.6.2",
         "react": "^18.2.0",
+        "ts-node": "^10.9.1",
         "typescript": "^4.9.5"
     },
     "devDependencies": {
