--- a/testrunner/tsconfig.json
+++ b/testrunner/tsconfig.json
@@ -1,8 +1,14 @@
 {
+  "ts-node": {
+    "compilerOptions": {
+      "module": "commonjs"
+    }
+  },
     "compilerOptions": {
       "target": "ES6",
       "module": "CommonJS",
       "lib": ["ES6", "esnext.asynciterable"],
+      "allowJs": true,
       "skipLibCheck": true,
       "sourceMap": true,
       "outDir": "./dist",
@@ -16,11 +22,13 @@
       "noImplicitReturns": true,
       "noFallthroughCasesInSwitch": true,
       "allowSyntheticDefaultImports": true,
-      "esModuleInterop": true,
       "emitDecoratorMetadata": true,
       "experimentalDecorators": true,
-      "resolveJsonModule": true,
       "baseUrl": ".",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
+    "rootDir": "src",
     },
     "exclude": ["node_modules"],
     "include": ["./src/*.ts", "./src/**/*.ts"],
