--- a/testrunner/package.json
+++ b/testrunner/package.json
@@ -1,33 +1,32 @@
 {
-    "name": "tests",
-    "version": "1.0.0",
-    "description": "",
-    "main": "jest.config.ts",
-    "scripts": {
-        "test": "jest"
-    },
-    "author": "",
-    "type": "module",
-    "license": "ISC",
-    "dependencies": {
-        "@apollo/client": "^3.6.6",
-        "@graphql-tools/mock": "^9.0.0",
-        "@graphql-tools/schema": "^10.0.0",
-        "@types/jest": "^27.5.2",
-        "apollo-link-schema": "^1.2.5",
-        "cross-fetch": "^3.1.5",
-        "graph-tools": "^0.1.2",
-        "graphql-tools": "^9.0.0",
-        "jest": "^29.6.2",
-        "react": "^18.2.0",
-        "ts-jest": "^29.1.1",
-        "ts-node": "^10.9.1",
-        "typescript": "^4.9.5"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.23.2",
-        "@babel/preset-env": "^7.23.2",
-        "@babel/preset-typescript": "^7.23.2",
-        "babel-jest": "^29.7.0"
-    }
+  "name": "tests",
+  "version": "1.0.0",
+  "description": "",
+  "main": "jest.config.ts",
+  "scripts": {
+    "test": "npx jest"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@apollo/client": "^3.6.6",
+    "@graphql-tools/mock": "^9.0.0",
+    "@graphql-tools/schema": "^10.0.0",
+    "@types/jest": "^27.5.2",
+    "apollo-link-schema": "^1.2.5",
+    "cross-fetch": "^3.1.5",
+    "graph-tools": "^0.1.2",
+    "graphql-tools": "^9.0.0",
+    "jest": "^29.6.2",
+    "react": "^18.2.0",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.23.2",
+    "@babel/preset-env": "^7.23.2",
+    "@babel/preset-typescript": "^7.23.2",
+    "babel-jest": "^29.7.0"
+  }
 }
