Test back on addUser resolver

--- a/testrunner/tsconfig.json
+++ b/testrunner/tsconfig.json
@@ -4,32 +4,36 @@
       "module": "commonjs"
     }
   },
-    "compilerOptions": {
-      "target": "ES6",
-      "module": "CommonJS",
-      "lib": ["ES6", "esnext.asynciterable"],
-      "allowJs": true,
-      "skipLibCheck": true,
-      "sourceMap": true,
-      "outDir": "./dist",
-      "removeComments": true,
-      "noImplicitAny": true,
-      "strictNullChecks": true,
-      "strictFunctionTypes": true,
-      "noImplicitThis": true,
-      "noUnusedLocals": true,
-      "noUnusedParameters": true,
-      "noImplicitReturns": true,
-      "noFallthroughCasesInSwitch": true,
-      "allowSyntheticDefaultImports": true,
-      "emitDecoratorMetadata": true,
-      "experimentalDecorators": true,
-      "baseUrl": ".",
+  "compilerOptions": {
+    "target": "ES6",
+    "module": "CommonJS",
+    "lib": ["ES6", "esnext.asynciterable"],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "sourceMap": true,
+    "outDir": "./dist",
+    "removeComments": true,
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "strictFunctionTypes": true,
+    "noImplicitThis": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
+    "allowSyntheticDefaultImports": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "baseUrl": ".",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "esModuleInterop": true,
-    "rootDir": "src",
-    },
-    "exclude": ["node_modules"],
-    "include": ["./src/*.ts", "./src/**/*.ts"],
-  }
+    "rootDir": "src"
+  },
+  "exclude": ["node_modules"],
+  "include": [
+    "./src/*.ts",
+    "./src/**/*.ts",
+    "../back/src/tests/UserResolver.test.ts"
+  ]
+}
