--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -24,3 +24,22 @@ services:
     restart: always
     ports:
       - 8080:8080
+
+  caddy:
+    image: caddy:2.7.5
+    restart: unless-stopped
+    ports:
+      - ${GATEWAY_PORT}:80
+      # - '443:443'
+    volumes:
+      - $PWD/Caddyfile:/etc/caddy/Caddyfile
+      - $PWD/site:/srv
+      - caddy_data:/data
+      - caddy_config:/config
+    depends_on: -back
+      -front
+
+volumes:
+  caddy_data:
+    external: true
+  caddy_config:
