--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -37,8 +37,8 @@ services:
       - caddy_data:/data
       - caddy_config:/config
     depends_on:
-      - back
-      - front
+      - backend
+      - frontend
 
 volumes:
   caddy_data:
