--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -25,22 +25,18 @@ services:
     ports:
       - 8080:8080
 
-  caddy:
-    image: caddy:2.7.5
-    restart: unless-stopped
-    ports:
-      - ${GATEWAY_PORT}:80
-      # - '443:443'
-    volumes:
-      - $PWD/Caddyfile:/etc/caddy/Caddyfile
-      - $PWD/site:/srv
-      - caddy_data:/data
-      - caddy_config:/config
+  nginx:
+    image: nginx:1.21.3
     depends_on:
       - backend
       - frontend
+    restart: always
+    ports:
+      - ${GATEWAY_PORT}:80
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+      - web-client-build:/web-client-build
+      - ./logs:/var/log/nginx
 
 volumes:
-  caddy_data:
-    external: true
-  caddy_config:
+  web-client-build:
